--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Oasis App Build (Ultimate Force & Surgical Patch)
+name: Oasis App Build (Final Success - Lowcase Fix)
 
 on:
   push:
@@ -19,10 +19,10 @@ jobs:
         with:
           node-version: '20'
 
-      - name: 3. Correct File Names & Assets
-        # تصحيح الأسماء العربية فوراً لضمان عثور EAS على ملفات الإعدادات
+      - name: 3. Correct File Names & Structure
+        # ضمان تحويل الأسماء لأحرف صغيرة وتصحيح المسار ليتوافق مع app.json الجديد
         run: |
-          mv "App.json ملف" app.json || true
+          mv "App.json ملف" app.json || mv "App.json" app.json || true
           mv "package.json ملف" package.json || true
           cp -r assets mobile/assets || true
 
@@ -32,21 +32,22 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 5. Clean & Force Resolve Dependencies
+      - name: 5. Clean & Fresh Installation
         working-directory: mobile
         run: |
-          echo "Deep cleaning and re-installing dependencies..."
+          echo "Cleaning and installing dependencies for Oasis App..."
           rm -rf .expo/ node_modules/ package-lock.json
           npm install --legacy-peer-deps --force
-          npx expo install expo-notifications expo-device expo-constants -- --force
+          # تثبيت المكتبات المذكورة في plugins لضمان وجودها
+          npx expo install expo-notifications expo-image-picker expo-av -- --force
 
-      - name: 6. Precision Surgical Patch & Force Cloud Build
+      - name: 6. Surgical Patch & Force Cloud Build
         working-directory: mobile
         run: |
-          echo "Applying Surgical Patch to ZegoCloud (Force Mode)..."
-          # المشرط الجراحي الإنجليزي: استهداف ZegoCloud فقط لحذف 'typeof' المسببة للخطأ
+          echo "Applying English Surgical Patch to ZegoCloud Plugins..."
+          # المشرط الجراحي: إصلاح ملفات المكونات الإضافية التي عرفتها في app.json
           find node_modules/@zegocloud -type f \( -name "*.js" -o -name "*.json" \) -exec sed -i 's/typeof //g' {} + || true
           
-          echo "Forcing build and bypassing local config validation..."
-          # إجبار النظام على تجاهل أخطاء التكوين المحلي والرفع مباشرة للسحابة
+          echo "Launching Cloud Build for Project: oasis-app..."
+          # إجبار النظام على الرفع للسحابة باستخدام projectId: 742d678c...
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache
