--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Oasis App Build (Ultimate Surgical Fix - Final)
+name: Oasis App Build (Ultimate Force Fix)
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
           node-version: '20'
 
       - name: 3. Correct File Names & Structure
-        # ضمان استخدام أحرف صغيرة لملف الإعدادات لتجنب فشل EAS
+        # ضمان الأسماء الصغيرة لملفات الإعدادات
         run: |
           mv "App.json ملف" app.json || mv "App.json" app.json || true
           mv "package.json ملف" package.json || true
@@ -32,28 +32,26 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 5. Clean & Force Installation
+      - name: 5. Force Install & Immediate Patch
         working-directory: mobile
         run: |
-          echo "Cleaning and installing dependencies..."
+          echo "Deep cleaning and installing..."
           rm -rf .expo/ node_modules/ package-lock.json
           npm install --legacy-peer-deps --force
-          npx expo install expo-notifications expo-image-picker expo-av -- --force
-
-      - name: 6. Precision Surgical Patch & Force Cloud Build
-        working-directory: mobile
-        run: |
-          echo "Applying Global Surgical Patch to ALL ZegoCloud files..."
-          # تعديل جوهري: استهداف كافة أنواع الملفات (js, json, map, d.ts) بدون استثناء
+          
+          echo "IMMEDIATE SURGICAL PATCH: Cleaning ZegoCloud before Expo sees it..."
+          # تطهير استباقي لكل أنواع الملفات (js, json, map, d.ts) فور التثبيت
           find node_modules/@zegocloud -type f -exec sed -i 's/typeof //g' {} + || true
           
-          echo "Verifying patch success..."
-          # التحقق النهائي لضمان عدم وجود أي بقايا للكلمة المسببة للخطأ
-          if grep -r "typeof " node_modules/@zegocloud; then
-            echo "Aggressive cleaning in progress for specific files..."
-            grep -rl "typeof " node_modules/@zegocloud | xargs sed -i 's/typeof //g' || true
-          fi
+          npx expo install expo-notifications expo-image-picker expo-av -- --force
 
-          echo "Launching Cloud Build for project: oasis-app..."
-          # إجبار السحابة على البدء وتجاوز الفحص المحلي تماماً
+      - name: 6. Final Verification & Launch Cloud Build
+        working-directory: mobile
+        run: |
+          echo "Final verification strike..."
+          # التأكد من خلو المشروع من السموم البرمجية قبل الرفع
+          grep -rl "typeof " node_modules/@zegocloud | xargs sed -i 's/typeof //g' || true
+          
+          echo "Forcing EAS Build to Cloud..."
+          # استخدام --clear-cache لتجاوز أي تعارضات سابقة في السحابة
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache
