--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Oasis App Build (Ultimate Force Fix)
+name: Oasis App Build (Ultimate Surgical Fix)
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
           node-version: '20'
 
       - name: 3. Correct File Names & Structure
-        # ضمان الأسماء الصغيرة لملفات الإعدادات
+        # تحويل الأسماء لأحرف صغيرة فوراً لضمان قراءة ملفات الإعدادات
         run: |
           mv "App.json ملف" app.json || mv "App.json" app.json || true
           mv "package.json ملف" package.json || true
@@ -32,26 +32,28 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 5. Force Install & Immediate Patch
+      - name: 5. Clean & Force Installation
         working-directory: mobile
         run: |
-          echo "Deep cleaning and installing..."
+          echo "Cleaning environment and installing dependencies..."
           rm -rf .expo/ node_modules/ package-lock.json
           npm install --legacy-peer-deps --force
-          
-          echo "IMMEDIATE SURGICAL PATCH: Cleaning ZegoCloud before Expo sees it..."
-          # تطهير استباقي لكل أنواع الملفات (js, json, map, d.ts) فور التثبيت
-          find node_modules/@zegocloud -type f -exec sed -i 's/typeof //g' {} + || true
-          
           npx expo install expo-notifications expo-image-picker expo-av -- --force
 
-      - name: 6. Final Verification & Launch Cloud Build
+      - name: 6. Precision Surgical Patch & Force Cloud Build
         working-directory: mobile
         run: |
-          echo "Final verification strike..."
-          # التأكد من خلو المشروع من السموم البرمجية قبل الرفع
-          grep -rl "typeof " node_modules/@zegocloud | xargs sed -i 's/typeof //g' || true
+          echo "Applying Deep Surgical Patch to ZegoCloud..."
+          # استخدام xargs لضمان حذف 'typeof' من كافة الملفات بعمق واختراق أي حماية
+          find node_modules/@zegocloud -type f \( -name "*.js" -o -name "*.json" \) -print0 | xargs -0 sed -i 's/typeof //g' || true
           
-          echo "Forcing EAS Build to Cloud..."
-          # استخدام --clear-cache لتجاوز أي تعارضات سابقة في السحابة
+          echo "Verifying patch success..."
+          # التحقق من خلو المجلد من كلمة 'typeof' المسببة للخطأ
+          if grep -r "typeof " node_modules/@zegocloud; then
+            echo "Warning: typeof still exists, forcing secondary cleaning..."
+            find node_modules/@zegocloud -type f -exec sed -i 's/typeof //g' {} + || true
+          fi
+
+          echo "Launching Cloud Build with Clear Cache..."
+          # تجاوز الفحص المحلي والرفع مباشرة للسحابة مع مسح الذاكرة المؤقتة
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache
