--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,6 +2,13 @@
   "name": "oasis-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "postinstall": "patch-package"
+  },
   "dependencies": {
     "expo": "~50.0.0",
     "expo-status-bar": "~1.11.1",
@@ -27,7 +34,9 @@
     "react-native-crypto-js": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   },
   "private": true
 }
