--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,15 +17,19 @@ jobs:
         with:
           node-version: '20'
 
-      - name: 3. Path Synchronization (Internal/External)
-        # ربط مجلد patches الخارجي بمجلد العمل الداخلي
+      - name: 3. Dynamic Path Discovery
+        # هذا الجزء ينهي مشكلة المسارات المكررة نهائياً
         run: |
-          # إنشاء مجلد patches داخل mobile لكي تراه أداة patch-package
-          mkdir -p oasis-server/mobile/patches
-          cp -r patches/* oasis-server/mobile/patches/ || echo "No external patches found"
+          # البحث عن مكان package.json الحقيقي مهما كان عمق المجلدات
+          REAL_PKG_PATH=$(find . -name "package.json" -not -path "*/node_modules/*" | head -n 1)
+          PROJECT_ROOT=$(dirname "$REAL_PKG_PATH")
+          echo "PROJECT_ROOT=$PROJECT_ROOT" >> $GITHUB_ENV
+          echo "✅ Project found at: $PROJECT_ROOT"
           
-          # التأكد من وجود سكريبت التطهير اليدوي في مكانه
-          cp oasis-server/mobile/patch-zegocloud.js oasis-server/mobile/scripts/patch-zegocloud.js || true
+          # نقل التصحيحات والسكريبتات للمكان الصحيح
+          mkdir -p "$PROJECT_ROOT/patches"
+          cp -r patches/* "$PROJECT_ROOT/patches/" || true
+          cp "$PROJECT_ROOT/patch-zegocloud.js" "$PROJECT_ROOT/scripts/patch-zegocloud.js" || true
 
       - name: 4. Setup EAS CLI
         uses: expo/expo-github-action@v8
@@ -33,22 +37,21 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 5. Professional Patching & Install
-        # العمل داخل مجلد 'mobile' بناءً على هيكل ملفاتك
-        working-directory: oasis-server/mobile
+      - name: 5. Professional Installation & Patching
+        # التنفيذ داخل المسار المكتشف تلقائياً لتجنب خطأ ENOENT
+        working-directory: ${{ env.PROJECT_ROOT }}
         run: |
           echo "Current Path: $(pwd)"
-          # تثبيت الحزم وتطبيق ملف الـ .patch تلقائياً
+          rm -rf node_modules
+          # التثبيت سيطبق الـ Patch آلياً
           npm install --legacy-peer-deps --force
           
-          # تشغيل سكريبت التطهير اليدوي لضمان حذف typeof نهائياً
-          node patch-zegocloud.js || node scripts/patch-zegocloud.js || echo "Manual patch step skipped"
+          # تشغيل سكريبت التطهير اليدوي كخطة بديلة
+          node patch-zegocloud.js || node scripts/patch-zegocloud.js || echo "Script skipped"
 
-      - name: 6. Final EAS Build Launch
-        working-directory: oasis-server/mobile
+      - name: 6. Launch EAS Cloud Build
+        working-directory: ${{ env.PROJECT_ROOT }}
         run: |
-          # فحص أمان أخير للتأكد من نظافة الكود من كلمة typeof
-          grep -r "typeof " node_modules/@zegocloud || echo "✅ Environment is Clean!"
-          
-          # إطلاق البناء السحابي مع مسح الكاش لتجاوز أي تعليق سابق
+          # التأكد من اختفاء كلمة typeof المسببة للخطأ
+          grep -r "typeof " node_modules/@zegocloud || echo "✅ Code is Clean!"
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache
